--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -24,7 +24,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/atk1"
         android:textSize="10sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star_big_on"
         app:iconTint="@null"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/atk2"
         android:textSize="10sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star"
         app:iconTint="@null"
@@ -54,7 +54,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/atk3"
         android:textSize="10sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star_big_on"
         app:iconTint="@null"
