fixing bugs, adding code & reorganise folders

--- a/PokemonShowdown/app/src/main/res/values/colors.xml
+++ b/PokemonShowdown/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="white_shadow">#32CFCFCB</color>
     <color name="bluep">#44CCF0</color>
 
-    <!--colors-->
+    <!--type colors-->
     <color name="bug">#83C301</color>
     <color name="dark">#5B5466</color>
     <color name="dragon">#016FC9</color>
