--- a/PokemonShowdown/app/src/main/res/layout/list_element.xml
+++ b/PokemonShowdown/app/src/main/res/layout/list_element.xml
@@ -15,6 +15,7 @@
     android:focusable="true">
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
