--- a/PokemonShowdown/app/src/main/res/layout/activity_main.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_main.xml
@@ -28,52 +28,52 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="24dp"
-                app:contentPadding="5dp"
-                app:cardBackgroundColor="@color/white_shadow" >
+                app:cardBackgroundColor="@color/white_shadow"
+                app:contentPadding="5dp">
 
                 <ImageView
-                    android:id="@+id/pk1"
+                    android:id="@+id/pokemon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/p003"
-                    android:contentDescription="@string/pokemon_1" />
+                    android:contentDescription="@string/pokemon_1"
+                    app:srcCompat="@drawable/p003" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
-                app:contentPadding="5dp"
-                app:cardBackgroundColor="@color/white_shadow">
+                app:cardBackgroundColor="@color/white_shadow"
+                app:contentPadding="5dp">
 
                 <ImageView
                     android:id="@+id/pk2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/p006"
-                    android:contentDescription="@string/pokemon_2" />
+                    android:contentDescription="@string/pokemon_2"
+                    app:srcCompat="@drawable/p006" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv3"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
-                app:contentPadding="5dp"
-                app:cardBackgroundColor="@color/white_shadow">
+                app:cardBackgroundColor="@color/white_shadow"
+                app:contentPadding="5dp">
 
                 <ImageView
                     android:id="@+id/pk3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/p009"
-                    android:contentDescription="@string/pokemon_3" />
+                    android:contentDescription="@string/pokemon_3"
+                    app:srcCompat="@drawable/p009" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
