--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -70,7 +70,7 @@
         android:layout_marginBottom="10dp"
         android:text="@string/atk4"
         android:textSize="10sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:backgroundTint="@color/purple_200"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star_big_on"
