--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/atk1"
         android:textSize="10sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star_big_on"
         app:iconTint="@null"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/atk2"
         android:textSize="10sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star"
         app:iconTint="@null"
@@ -55,7 +55,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/atk3"
         android:textSize="10sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="25dp"
         app:icon="@android:drawable/btn_star_big_on"
         app:iconTint="@null"
@@ -86,9 +86,16 @@
         android:layout_height="57dp"
         android:layout_marginBottom="15dp"
         android:text="@string/fight_button"
-        android:visibility="gone"
+        android:visibility="visible"
+        app:backgroundTint="@color/whitep"
+        app:icon="@drawable/figth_icon"
+        app:iconGravity="end"
+        app:iconPadding="0dp"
+        app:iconSize="45dp"
+        app:iconTint="@color/redp"
         app:layout_constraintBottom_toTopOf="@+id/changepk"
-        app:layout_constraintEnd_toEndOf="@+id/changepk" />
+        app:layout_constraintEnd_toEndOf="@+id/changepk"
+        tools:ignore="TextContrastCheck" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/changepk"
@@ -97,7 +104,13 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="40dp"
         android:text="@string/change_pokemon_button"
-        android:visibility="gone"
+        android:visibility="visible"
+        app:backgroundTint="@color/whitep"
+        app:icon="@drawable/pkmn_icon"
+        app:iconGravity="end"
+        app:iconPadding="0dp"
+        app:iconSize="45dp"
+        app:iconTint="@color/greenhp"
         app:layout_constraintBottom_toBottomOf="@+id/background"
         app:layout_constraintEnd_toEndOf="parent" />
 
