--- a/PokemonShowdown/app/src/main/res/layout/activity_movements_picker.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_movements_picker.xml
@@ -67,7 +67,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_id"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
