--- a/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
+++ b/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
@@ -8,7 +8,8 @@
     android:clickable="true"
     android:foreground="@null"
     cardview:cardBackgroundColor="@color/whitep"
-    cardview:cardCornerRadius="12dp">
+    cardview:cardCornerRadius="12dp"
+    android:focusable="true">
 
     <LinearLayout
         android:id="@+id/llP"
@@ -21,14 +22,16 @@
             android:id="@+id/pokemon_img"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:src="@drawable/p094"
+            android:contentDescription="@string/pokemon_ejemplo" />
 
         <TextView
             android:id="@+id/pokemon_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Mew"
+            android:text="@string/pokemon_ejemplo"
             android:textColor="#CB2A2F35"
             android:textSize="13sp" />
 
