--- a/PokemonShowdown/app/src/main/res/layout/list_element.xml
+++ b/PokemonShowdown/app/src/main/res/layout/list_element.xml
@@ -6,69 +6,105 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="#FEF1E5"
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp"
-    android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardUseCompatPadding="true"
-    android:focusable="true">
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:id="@+id/rl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/cd"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="to do"
-            app:srcCompat="@drawable/p003" />
-
-        <TextView
-            android:id="@+id/mov_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/rl"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="11dp"
-            android:layout_toEndOf="@+id/cd"
-            android:text="Guillotina"
-            android:textColor="#94000000"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/mov_accuracy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="27dp"
-            android:layout_marginEnd="28dp"
-            android:text="Mucha"
-            android:textColor="#94000000" />
+            <ImageView
+                android:id="@+id/cd"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:contentDescription="to do"
+                app:srcCompat="@drawable/mt_normal" />
 
-        <TextView
-            android:id="@+id/mov_dmg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/mov_name"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="21dp"
-            android:text="TextView" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.75"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/mov_type"
-            android:layout_width="78dp"
-            android:layout_height="22dp"
-            android:layout_below="@+id/mov_name"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="25dp"
-            android:layout_toEndOf="@+id/cd"
-            app:srcCompat="@drawable/p003" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="bottom"
+                    android:orientation="horizontal"
+                    android:paddingStart="5dp"
+                    android:paddingBottom="2dp">
 
+                    <TextView
+                        android:id="@+id/mov_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Guillotina"
+                        android:textColor="@color/greyp"
+                        android:textSize="20sp" />
+
+                    <ImageView
+                        android:id="@+id/type_of_move"
+                        android:layout_width="wrap_content"
+                        android:layout_height="25dp"
+                        android:paddingLeft="5dp"
+                        app:srcCompat="@drawable/dmg_move"
+                        app:tint="@color/greyp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/mov_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="65dp"
+                    app:srcCompat="@drawable/txt_normal" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|center_horizontal"
+                android:orientation="vertical"
+                android:paddingRight="20dp">
+
+                <TextView
+                    android:id="@+id/mov_accuracy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="100"
+                    android:textAlignment="viewEnd"
+                    android:textColor="#94000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/mov_dmg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="20"
+                    android:textAlignment="viewEnd"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+        </LinearLayout>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
