--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -119,11 +119,12 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="-1dp"
+        android:contentDescription="@string/pokemon_de_espaldas"
         app:layout_constraintBottom_toTopOf="@+id/constraintPkBData"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/p094b"
-        tools:ignore="ImageContrastCheck"
-        android:contentDescription="@string/pokemon_de_espaldas" />
+        tools:ignore="ImageContrastCheck" />
 
     <ImageView
         android:id="@+id/pk"
@@ -202,9 +203,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintTexto"
         android:layout_width="match_parent"
-        android:layout_height="87dp"
+        android:layout_height="77dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/blackp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -328,7 +330,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@android:drawable/screen_background_light_transparent"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -361,11 +363,11 @@
             android:layout_width="34dp"
             android:layout_height="20dp"
             android:layout_marginStart="8dp"
+            android:contentDescription="@string/status"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pk_name"
             app:srcCompat="@android:drawable/ic_input_delete"
-            tools:ignore="ImageContrastCheck"
-            android:contentDescription="@string/status" />
+            tools:ignore="ImageContrastCheck" />
 
         <ProgressBar
             android:id="@+id/pk_hpBar"
