--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -6,6 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".Combat">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.75"
+            android:background="@drawable/ic_corner"
+            android:backgroundTint="@color/blackp"
+            android:rotation="0">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.75"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="@color/whitep" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.75"
+            android:background="@drawable/ic_corner"
+            android:backgroundTint="@color/blackp"
+            android:rotation="180">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/background"
         android:layout_width="0dp"
@@ -201,35 +236,11 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintTexto"
-        android:layout_width="match_parent"
-        android:layout_height="77dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/blackp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/screentext"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:text="@string/texto_ejemplo_combate"
-            android:textColor="@color/whitep"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintPkBData"
-        android:layout_width="259dp"
+        android:layout_width="280dp"
         android:layout_height="77dp"
         android:layout_marginBottom="10dp"
-        android:background="@android:drawable/screen_background_light_transparent"
+        android:background="@drawable/ic_corner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -237,10 +248,9 @@
             android:id="@+id/pkbstatus"
             android:layout_width="34dp"
             android:layout_height="20dp"
-            android:layout_marginEnd="10dp"
             android:contentDescription="@string/status"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/pkb_hpBar"
             app:layout_constraintHorizontal_bias="0.792"
             app:layout_constraintStart_toEndOf="@+id/pkbhealth"
             app:layout_constraintTop_toBottomOf="@+id/pkb_hpBar"
@@ -264,19 +274,23 @@
             android:id="@+id/pkb_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="35dp"
             android:text="@string/level"
             android:textColor="@color/greyp"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/pkb_name"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/pkb_hpBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="227dp"
+            android:layout_width="0dp"
             android:layout_height="20dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="15dp"
             android:progress="100"
             android:progressTint="@color/greenhp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -326,20 +340,32 @@
         android:layout_width="259dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:background="@android:drawable/screen_background_light_transparent"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:rotation="180"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_corner" />
 
         <TextView
             android:id="@+id/pk_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="75dp"
             android:text="@string/pokemon_ejemplo"
             android:textColor="@color/greyp"
             android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/pk_level"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -358,23 +384,75 @@
             android:id="@+id/pkstatus"
             android:layout_width="34dp"
             android:layout_height="20dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="30dp"
             android:contentDescription="@string/status"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/pk_name"
             app:layout_constraintTop_toBottomOf="@+id/pk_name"
-            app:srcCompat="@android:drawable/ic_input_delete"
+            app:srcCompat="@drawable/quemado"
             tools:ignore="ImageContrastCheck" />
 
         <ProgressBar
             android:id="@+id/pk_hpBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="5dp"
             android:progress="100"
             android:progressTint="#4EEC63"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/pkstatus"
             app:layout_constraintTop_toBottomOf="@+id/pk_name" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintTexto"
+        android:layout_width="match_parent"
+        android:layout_height="77dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/whitep"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/greyp"
+            android:orientation="horizontal">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.75"
+                android:background="@drawable/ic_corner"
+                android:backgroundTint="@color/blackp"
+                android:rotation="0">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/screentext"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.75"
+                android:gravity="center"
+                android:text="@string/texto_ejemplo_combate"
+                android:textColor="@color/whitep"
+                android:textSize="20sp" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.75"
+                android:background="@drawable/ic_corner"
+                android:backgroundTint="@color/blackp"
+                android:rotation="180">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -384,15 +462,16 @@
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:contentDescription="@string/turno"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/j1"
-        android:contentDescription="@string/turno" />
+        app:srcCompat="@drawable/j1" />
 
     <ImageView
         android:id="@+id/playerturnscreen"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/pantallaJ"
         android:scaleType="fitXY"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -401,7 +480,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_launcher_background"
-        android:contentDescription="@string/pantallaJ" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
