--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -235,105 +235,118 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/constraintPkBData"
         android:layout_width="280dp"
         android:layout_height="77dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/ic_corner"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/pkbstatus"
-            android:layout_width="34dp"
-            android:layout_height="20dp"
-            android:contentDescription="@string/status"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/pkb_hpBar"
-            app:layout_constraintHorizontal_bias="0.792"
-            app:layout_constraintStart_toEndOf="@+id/pkbhealth"
-            app:layout_constraintTop_toBottomOf="@+id/pkb_hpBar"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@android:drawable/ic_input_delete"
-            tools:ignore="ImageContrastCheck" />
-
-        <TextView
-            android:id="@+id/pkb_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/pokemon_ejemplo"
-            android:textColor="@color/greyp"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/pkb_level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="35dp"
-            android:text="@string/level"
-            android:textColor="@color/greyp"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/pkb_name"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ProgressBar
-            android:id="@+id/pkb_hpBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="15dp"
-            android:progress="100"
-            android:progressTint="@color/greenhp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pkb_name" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <LinearLayout
-            android:id="@+id/pkbhealth"
-            android:layout_width="90dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="24dp"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pkb_hpBar">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.75"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/pkb_actual_hp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/ejemplo_hp"
-                android:textColor="@color/greyp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/separator1"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/slashbar"
-                android:textColor="@color/greyp" />
+                <TextView
+                    android:id="@+id/pkb_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/pokemon_ejemplo"
+                    android:textColor="@color/greyp"
+                    android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/pkb_maxhp"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/pkb_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginStart="60dp"
+                    android:text="@string/level"
+                    android:textColor="@color/greyp"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/pkb_hpBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:progressTint="@color/greenhp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/ejemplo_hp"
-                android:textColor="@color/greyp" />
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/pkbhealth"
+                    android:layout_width="90dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="24dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/pkb_actual_hp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/ejemplo_hp"
+                        android:textColor="@color/greyp" />
+
+                    <TextView
+                        android:id="@+id/separator1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/slashbar"
+                        android:textColor="@color/greyp" />
+
+                    <TextView
+                        android:id="@+id/pkb_maxhp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/ejemplo_hp"
+                        android:textColor="@color/greyp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/pkbstatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/status"
+                    android:paddingBottom="5dp"
+                    app:srcCompat="@drawable/quemado"
+                    tools:ignore="ImageContrastCheck" />
+
+            </LinearLayout>
+
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@android:color/transparent" />
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintPkData"
@@ -398,8 +411,7 @@
             android:layout_height="20dp"
             android:layout_marginStart="6dp"
             android:layout_marginEnd="5dp"
-            android:progress="100"
-            android:progressTint="#4EEC63"
+            android:progressTint="@color/greenhp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/pkstatus"
             app:layout_constraintTop_toBottomOf="@+id/pk_name" />
