--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -6,41 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Combat">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.75"
-            android:background="@drawable/ic_corner"
-            android:backgroundTint="@color/blackp"
-            android:rotation="0">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:gravity="center"
-            android:text="TextView"
-            android:textColor="@color/whitep" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.75"
-            android:background="@drawable/ic_corner"
-            android:backgroundTint="@color/blackp"
-            android:rotation="180">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-
     <ImageView
         android:id="@+id/background"
         android:layout_width="0dp"
@@ -59,6 +24,7 @@
         android:layout_height="35dp"
         android:layout_marginBottom="5dp"
         android:text="@string/atk1"
+        android:textColor="@color/greyp"
         android:textSize="10sp"
         android:visibility="gone"
         app:cornerRadius="25dp"
@@ -74,6 +40,7 @@
         android:layout_height="35dp"
         android:layout_marginBottom="5dp"
         android:text="@string/atk2"
+        android:textColor="@color/greyp"
         android:textSize="10sp"
         android:visibility="gone"
         app:cornerRadius="25dp"
@@ -89,6 +56,7 @@
         android:layout_height="35dp"
         android:layout_marginBottom="5dp"
         android:text="@string/atk3"
+        android:textColor="@color/greyp"
         android:textSize="10sp"
         android:visibility="gone"
         app:cornerRadius="25dp"
@@ -105,6 +73,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="10dp"
         android:text="@string/atk4"
+        android:textColor="@color/greyp"
         android:textSize="10sp"
         android:visibility="visible"
         app:backgroundTint="@color/purple_200"
