--- a/PokemonShowdown/app/src/main/res/values/themes.xml
+++ b/PokemonShowdown/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.PokemonShowdown.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.PokemonShowdown.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.PokemonShowdown.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
