--- a/PokemonShowdown/app/src/main/res/layout/activity_battle.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_battle.xml
@@ -490,4 +490,19 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_launcher_background" />
 
+    <ImageView
+        android:id="@+id/finalscreem"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/pantallafinal"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
